--- a/templates/tool.html
+++ b/templates/tool.html
@@ -18,7 +18,7 @@
       </div>
       <div class="project-actions">
         <a class="pill ghost" href="/projects/{{ project.id }}">Full Flow</a>
-        <a class="pill primary" href="/projects/{{ project.id }}/dashboard">Minimized Flow</a>
+        <a class="pill primary" href="/projects/{{ project.id }}/dashboard?flow=min">Minimized Flow</a>
       </div>
     </section>
 
