Demo mode: fixed TOTP login, daily DB reset, bottom-right DEMO watermark, login disclaimer; default port 51005

--- a/templates/account.html
+++ b/templates/account.html
@@ -92,5 +92,6 @@
         <a class="pill ghost login-guest" href="/logout">Log out</a>
       </article>
     </main>
+    {% if demo_mode %}<div class="demo-watermark">DEMO</div>{% endif %}
   </body>
 </html>
