--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,7 @@
       <div class="panel-head-controls">
         <button id="collapse-form" class="pill ghost tiny" type="button" aria-expanded="true">
           Collapse
+        {% if demo_mode %}<div class="demo-watermark">DEMO</div>{% endif %}
         </button>
         <button id="reload" class="pill ghost">Refresh</button>
       </div>
