--- a/templates/tool.html
+++ b/templates/tool.html
@@ -324,6 +324,7 @@
       </div>
     </section>
   </main>
+  {% if demo_mode %}<div class="demo-watermark">DEMO</div>{% endif %}
 
   <template id="kanban-card-template">
     <div class="kanban-card glass" draggable="true">
